; ModuleID = '/home/carl/AnghaBench/esp-idf/components/fatfs/diskio/extr_diskio_rawflash.c_ff_diskio_register_raw_partition.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/fatfs/diskio/extr_diskio_rawflash.c_ff_diskio_register_raw_partition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32*, i32*, i32*, i32* }

@FF_VOLUMES = common dso_local global i64 0, align 8
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ff_diskio_register_raw_partition.raw_impl = internal constant %struct.TYPE_3__ { i32* @ff_raw_ioctl, i32* @ff_raw_write, i32* @ff_raw_read, i32* @ff_raw_status, i32* @ff_raw_initialize }, align 8
@ff_raw_ioctl = common dso_local global i32 0, align 4
@ff_raw_write = common dso_local global i32 0, align 4
@ff_raw_read = common dso_local global i32 0, align 4
@ff_raw_status = common dso_local global i32 0, align 4
@ff_raw_initialize = common dso_local global i32 0, align 4
@ff_raw_handles = common dso_local global i32** null, align 8
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_diskio_register_raw_partition(i64 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @FF_VOLUMES, align 8
  %8 = icmp uge i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %10, i32* %3, align 4
  br label %19

11:                                               ; preds = %2
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @ff_diskio_register(i64 %12, %struct.TYPE_3__* @ff_diskio_register_raw_partition.raw_impl)
  %14 = load i32*, i32** %5, align 8
  %15 = load i32**, i32*** @ff_raw_handles, align 8
  %16 = load i64, i64* %4, align 8
  %17 = getelementptr inbounds i32*, i32** %15, i64 %16
  store i32* %14, i32** %17, align 8
  %18 = load i32, i32* @ESP_OK, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %11, %9
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @ff_diskio_register(i64, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
